--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ xcuserdata/
 
 cross-*.txt
 root.tar.gz
+root_mini.tar.gz
+iSH.xcodeproj/project.pbxproj
 
 node_modules
 app/xtermjs/xterm-dist
@@ -16,5 +18,6 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
+
 
 e2e_out/
