--- a/app/App.xcconfig
+++ b/app/App.xcconfig
@@ -8,4 +8,5 @@ INFOPLIST_PREFIX_HEADER = $(BUILT_PRODUCTS_DIR)/infoplisticons.h
 ASSETCATALOG_COMPILER_APPICON_NAME = AppIcon
 CODE_SIGN_ENTITLEMENTS = app/iSH.entitlements
 
+HEADER_SEARCH_PATHS = $(inherited) $(SRCROOT) $(SRCROOT)/deps/libarchive/libarchive
 OTHER_LDFLAGS = -ObjC $(LINUX_APP_LDFLAGS)
