Add a structure in the task for AIO contexts to live in.

--- a/meson.build
+++ b/meson.build
@@ -142,6 +142,7 @@ if get_option('kernel') == 'ish'
         'fs/tmp.c',
 
         'fs/poll.c',
+        'fs/aio.c',
         'kernel/poll.c',
         'kernel/epoll.c',
 
