Enable kallsyms for linux
This requires adding libdl as a dependency.

--- a/meson.build
+++ b/meson.build
@@ -33,8 +33,9 @@ includes = [include_directories('.')]
 threads = dependency('threads')
 librt = cc.find_library('rt', required: false)
 libm = cc.find_library('m', required: false)
+libdl = cc.find_library('dl', required: false)
 sqlite3 = cc.find_library('sqlite3')
-dependencies = [librt, libm, threads, sqlite3]
+dependencies = [librt, libm, libdl, threads, sqlite3]
 
 subdir('vdso') # ish depends on the vdso
 
@@ -184,6 +185,7 @@ elif get_option('kernel') == 'linux'
         dependencies: [
             liblinux,
             libm,
+            libdl,
             threads,
             declare_dependency(link_whole: modules),
         ])
