Trying to merge in mainline master and reset the world of iSH-AOK

--- a/app/iSH.entitlements
+++ b/app/iSH.entitlements
@@ -8,7 +8,7 @@
 	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.app.ish.emkeyiSH</string>
+		<string>$(PRODUCT_APP_GROUP_IDENTIFIER)</string>
 	</array>
 </dict>
 </plist>
