--- a/app/FileProvider/iSHFileProvider.entitlements
+++ b/app/FileProvider/iSHFileProvider.entitlements
@@ -3,8 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>com.apple.security.application-groups</key>
-	<array>
-		<string>group.app.ish.emkeyiSH</string>
-	</array>
+	<array/>
 </dict>
 </plist>
