Force using latest xcode
Default is 14.2 according to https://github.com/actions/runner-images/blob/afd68edefb3b9837ff0338086d586c2cdcd5c2f6/images/macos/macos-13-Readme.md

--- a/.github/workflows/upload-build.yml
+++ b/.github/workflows/upload-build.yml
@@ -18,6 +18,7 @@ jobs:
 
       - name: Install deps
         run: |
+          xcode-select -s /Applications/Xcode_14.3.app
           pip3 install meson
           brew install ninja llvm
           bundle install
