Update social links

--- a/app/Icons/Icons.plist
+++ b/app/Icons/Icons.plist
@@ -5,7 +5,7 @@
 	<key></key>
 	<dict>
 		<key>link</key>
-		<string>https://twitter.com/tblodt</string>
+		<string>https://mastodon.social/@tbodt</string>
 		<key>author</key>
 		<string>@tbodt</string>
 		<key>description</key>
