Start mirroring alpine 3.19

--- a/.github/workflows/update-alpine-repo.yml
+++ b/.github/workflows/update-alpine-repo.yml
@@ -25,6 +25,8 @@ jobs:
           deps/aports/sync-archive.sh v3.17 community/x86 deps/aports
           deps/aports/sync-archive.sh v3.18 main/x86 deps/aports
           deps/aports/sync-archive.sh v3.18 community/x86 deps/aports
+          deps/aports/sync-archive.sh v3.19 main/x86 deps/aports
+          deps/aports/sync-archive.sh v3.19 community/x86 deps/aports
       - name: Commit
         id: commit
         run: |
