Homebrew has moved on Apple Silicon, support both old and new.

--- a/tools/meson.build
+++ b/tools/meson.build
@@ -25,11 +25,14 @@ libarchive = dependency('libarchive', required: false)
 if not libarchive.found()
     # homebrew
     libarchive_lib = cc.find_library('archive', dirs: ['/usr/local/opt/libarchive/lib'], required: false)
-    if not libarchive_lib.found()
-        libarchive_lib = cc.find_library('archive', dirs: ['/opt/homebrew/opt/libarchive/lib'], required: false)
-    endif
     if libarchive_lib.found()
         libarchive = declare_dependency(dependencies: [libarchive_lib], include_directories: include_directories(['/usr/local/opt/libarchive/include']))
+    else
+        # Apple Silicon Homebrew
+        libarchive_lib = cc.find_library('archive', dirs: ['/opt/homebrew/opt/libarchive/lib'], required: false)
+        if libarchive_lib.found()
+            libarchive = declare_dependency(dependencies: [libarchive_lib], include_directories: include_directories(['/opt/homebrew/opt/libarchive/include']))
+        endif
     endif
 endif
 
