Install lld from homebrew from its new name as a separate package
https://infosec.exchange/@jonpalmisc/113234808342938025

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
             submodules: true
       - name: Install dependencies
         run: |
-          brew install llvm ninja libarchive meson
+          brew install llvm lld ninja libarchive meson
       - name: Clone Linux
         if: matrix.kernel == 'linux'
         run: deps/clone-linux.sh
