Import named pipes in fakefs as named pipes

--- a/tools/meson.build
+++ b/tools/meson.build
@@ -37,7 +37,12 @@ if not libarchive.found()
 endif
 
 if libarchive.found()
-    fakefsify = executable('fakefsify', ['fakefsify.c', 'fakefs.c'], dependencies: [libarchive], link_with: [libfakefs], include_directories: [includes])
+    fakefsify_src = [
+        'fakefsify.c',
+        'fakefs.c',
+        '../util/fchdir.c',
+    ]
+    fakefsify = executable('fakefsify', fakefsify_src, dependencies: [libarchive], link_with: [libfakefs], include_directories: [includes])
     custom_target('unfakefsify',
         build_by_default: true,
         command: ['ln', '-sf', 'fakefsify', '@OUTPUT@'],
