--- a/.github/workflows/update-alpine-repo.yml
+++ b/.github/workflows/update-alpine-repo.yml
@@ -27,6 +27,8 @@ jobs:
           deps/aports/sync-archive.sh v3.18 community/x86 deps/aports
           deps/aports/sync-archive.sh v3.19 main/x86 deps/aports
           deps/aports/sync-archive.sh v3.19 community/x86 deps/aports
+          deps/aports/sync-archive.sh v3.20 main/x86 deps/aports
+          deps/aports/sync-archive.sh v3.20 community/x86 deps/aports
       - name: Commit
         id: commit
         run: |
