Use -ld_classic to link ish+linux due to a bug in new linker (FB15608166)
The bug is that it ignores empty sections entirely even when they would
significantly affect the output, e.g. by influencing section ordering
or defining symbols.

--- a/deps/meson.build
+++ b/deps/meson.build
@@ -74,6 +74,7 @@ if get_option('kernel') == 'linux'
 
     if host_machine.system() == 'darwin'
         liblinux_link_args = [
+            '-Wl,-ld_classic',
             '-sectalign', '__DATA', '__percpu_first', '1000',
             '-sectalign', '__DATA', '__tracepoints', '20',
         ]
