--- a/meson_options.txt
+++ b/meson_options.txt
@@ -2,7 +2,7 @@ option('log', type: 'string', value: '')
 option('nolog', type: 'string', value: '')
 option('log_handler', type: 'string', value: 'dprintf')
 
-option('engine', type: 'combo', choices: ['asbestos'], value: 'asbestos')
+option('engine', type: 'combo', choices: ['asbestos', 'unicorn'], value: 'asbestos')
 option('kernel', type: 'combo', choices: ['ish', 'linux'], value: 'ish')
 option('kconfig', type: 'array', value: [])
 
