--- a/app/StaticLibLinux.xcconfig
+++ b/app/StaticLibLinux.xcconfig
@@ -2,7 +2,7 @@
 
 HEADER_SEARCH_PATHS = $(SRCROOT)/deps/linux/arch/ish/include $(MESON_BUILD_DIR)/deps/linux/arch/ish/include/generated $(SRCROOT)/deps/linux/include $(MESON_BUILD_DIR)/deps/linux/include $(SRCROOT)/deps/linux/arch/ish/include/uapi $(MESON_BUILD_DIR)/deps/linux/arch/ish/include/generated/uapi $(SRCROOT)/deps/linux/include/uapi $(MESON_BUILD_DIR)/deps/linux/arch/ish/include/generated/uapi $(SRCROOT)
 GCC_PREPROCESSOR_DEFINITIONS = __KERNEL__
-OTHER_CFLAGS = -U__weak -include $(SRCROOT)/deps/linux/include/linux/kconfig.h -include $(SRCROOT)/deps/linux/include/linux/compiler_types.h -Wno-gnu-variable-sized-type-not-at-end -Wno-conditional-uninitialized
+OTHER_CFLAGS = -U__weak -include linux/kconfig.h -include linux/compiler_types.h -Wno-gnu-variable-sized-type-not-at-end -Wno-conditional-uninitialized
 // disable modules because it results in clashes between linux and clang headers
 CLANG_ENABLE_MODULES = NO
 // these warnings are tripped by linux
