--- a/.github/workflows/upload-build.yml
+++ b/.github/workflows/upload-build.yml
@@ -42,6 +42,7 @@ jobs:
           path: |
             iSH.ipa
             iSH.app.dSYM.zip
+            iSH-appstore.app.dSYM.zip
 
       - uses: actions/upload-artifact@v4
         if: always()
